--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
-flake8]
+[flake8]
 # Не проверять код на соответствие стандартам W503 и F811
 ignore = 
     W503,
@@ -13,5 +13,4 @@ exclude =
     */env/,
 # Не проверять указанные файлы на соответствие определённым правилам:
 per-file-ignores =
-    */settings.py:E501 
-    */backend/urls.py:I001,
+    */settings.py:E501
